# JobScheduler

./: CMakeLists.txt  README.md  main.cpp  main_utils.hpp  utils.hpp
include/: feeder.hpp  job_scheduler.hpp  queuescheduler.hpp  queuethread.hpp  workerbase.hpp  workerfactory.hpp
